--- a/app-category/src/main/resources/application.yml
+++ b/app-category/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
   datasource:
-    url: jdbc:h2:mem:musinsa
+    url: jdbc:h2:mem:musinsa;NON_KEYWORDS=brand
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -19,11 +19,16 @@ spring:
       path: /h2-console
 
   jpa:
+    defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
     show-sql: true
-
+    properties:
+      hibernate:
+        format_sql: true
+        hbm2ddl:
+          import_files: import.sql
 
 springdoc:
   swagger-ui:
